--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   },
   "dependencies": {
     "babel-eslint": "^8.2.3",
+    "d3-array": "^1.2.1",
+    "d3-axis": "^1.0.8",
+    "d3-scale": "^2.1.0",
     "d3-scale-chromatic": "^1.3.0",
+    "d3-selection": "^1.3.0",
     "mapbox-gl": "^0.39.1",
     "react": "15.3.2",
     "react-dom": "15.3.2"
